# local_planning_performance_modelling

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  crash_notes.md  install_dependences.sh  package.xml  setup.cfg  setup.py
Docs/: Node_names_list
docker/: .bash_aliases  .bashrc  Dockerfile  build_docker_image.sh  run_docker_image.sh
docs/: Node_names_list
install_scripts/: build_workspace.sh  clone_repos.sh  install.sh  install_dependences.sh
launch/: all_simulation.launch.py  all_simulation2.launch.py  amcl.launch  amcl.launch.py  environment.launch  environment.launch.py  gazebo.launch.py  global_planner.launch.py  ground_truth_localization.launch.py  intermediate_planner.launch  local_planner.launch.py  local_planning_benchmark_supervisor.launch  local_planning_benchmark_supervisor.launch.py  localization_benchmark_supervisor.launch.py  localization_generator.launch.py  move_base.launch  navigation.launch  navigation.launch.py  navigation_arena.launch  navigation_dwa_arena.launch  navigation_gring.launch  pedsim.launch  play_recorded_runs.launch.py  recorder.launch  recorder.launch.py  rviz.launch.py  simulator.launch
local_planning_performance_modelling/: compute_metrics.py  execute_direct_benchmark.py  execute_grid_benchmark.py  local_planning_benchmark_run.py  local_planning_benchmark_supervisor.py  localization_generator.py  metrics.py  update_run_parameters.py
localization_performance_modelling/: execute_grid_benchmark.py  localization_benchmark_run.py  localization_benchmark_supervisor.py
notebooks/: MetroXRAINE_plots.ipynb  Smoothness.ipynb  (+57 more)
(+84 files in other folders)
