<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_planning_performance_modelling</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="enrico.piazza@polimi.it">Enrico Piazza</author>
  <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>
  <license>BSD License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
